# RPIIS

./: 1.bat  1.sh  1.txt  11.sh  11.txt  12.gwf  12.owl  1lab.bat  1laba.sh  2.bat  225-227.tex  231.tex  232.tex  233.tex  234tex.txt  235tex.txt  236tex.txt  2sem ,laba1 readme.md  3 lab  34.bat  34.sh  36.bat  36.sh  3labacod.tex  44.bat  44.sh  47.sh  48.bat  48.sh  5.bat  516losik.cpp  60.bat  60.sh  ConsoleApplication4.sln  FileName (3).cpp  FileName (4).cpp  FirstLab.sh  HIT summer course_AI and ML_assignment_July2024.doc  Header.h  Header1.h  (+164 more)
sem2/lab2/: CMakeLists.txt  ConsoleApplication11.cpp  Header.cpp  Header.h  LabWorkIntersection.cpp  Metods.cpp  README.MD  README.md  README2.md  ReadMe.md  Readme.md  Source.cpp  StaticLib.cpp  SymDiff.cpp  SymDiff.h  UnionOfSets.cpp  UnionOfSets.h  arrayA.txt  arrayboolean.cpp  arrayboolean.h  bulean.py  burakl2.py  buraksets.py  buraktests.py  code.cpp  cpp  functions.cpp  header.h  imp_lexer.py  in.txt  include.h  ini.txt  input.txt  input3.txt  input_A.txt  input_B.txt  interpreter.py  intersect.h  intersection.cpp  intersection.h  (+50 more)
sem2/lab2/ConsoleApplication1/: ConsoleApplication1.sln
sem2/lab2/LAB2/: LAB2.sln
sem2/lab2/Peresechenie/: Peresechenie.sln
sem2/lab2/Resources_for_vscode/: Peresechenie.cpp  peresechenie.h
sem2/lab2/SYMM_DIFF/: gtest.cpp  set1.txt  set2.txt  symm_differ_main.cpp  test.cpp  test_diff.txt  test_diff1.txt
sem2/lab2/SetWorkPiOIvIS/: SetWorkPiOIvIS.sln  Sets.cs  SetsMethods.cs
sem2/lab2/SetWorkPiOIvIS.Tests/: SetWorkPiOIvIS.Tests.csproj  SetsTests.cs
sem2/lab2/Tests/: GoogleTests.md  (+4 more)
(+2895 files in other folders)
